tests/NormalTests/paczka1/fuzzy1/67435530.err
Error in line 6: ra7KPq6O A370 39,5
Error in line 20: YgHeVY A74 100,10
Error in line 24: ra7KPq6O A580 52,7
Error in line 23: f5x A370 87,8
Error in line 12: YgHeVY S381 33,2
Error in line 28: ra7KPq6O S381 33,1
Error in line 35: PSFBzUBXaGg A74 53,7
